final fixes collapse expand transitions

--- a/src/components/AlarmList/AlarmList.scss
+++ b/src/components/AlarmList/AlarmList.scss
@@ -14,6 +14,7 @@
   }
 
   .list-item {
+    white-space: nowrap;
     cursor: pointer;
     display: flex;
     position: relative;
