--- a/src/components/List/List.scss
+++ b/src/components/List/List.scss
@@ -7,6 +7,7 @@
   padding: 0;
 
   .list-item {
+    white-space: nowrap;
     cursor: pointer;
     display: flex;
     position: relative;
